crates/lash/tests/ui/state_rewrite_history_requires_scope.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
 --> tests/ui/state_rewrite_history_requires_scope.rs:2:39
  |
2 |     let _ = session.control().state().rewrite_history(trigger).await;
  |                                       ^^^^^^^^^^^^^^^--------- argument #2 of type `ScopedEffectController<'_>` is missing
  |
note: method defined here
 --> src/control.rs
  |
  |     pub async fn rewrite_history(
  |                  ^^^^^^^^^^^^^^^
help: provide the argument
  |
2 |     let _ = session.control().state().rewrite_history(trigger, /* ScopedEffectController<'_> */).await;
  |                                                              ++++++++++++++++++++++++++++++++++
