crates/lash/tests/ui/state_rewrite_history_requires_scope.rs
async fn check(session: lash::LashSession, trigger: lash::runtime::RewriteTrigger) {
    let _ = session.control().state().rewrite_history(trigger).await;
}

fn main() {}
